# ordered_list_generator

./: Cargo.toml  README.md
src/: generator.rs  list.txt  main.rs  zeldalist.txt
