[package]
name = "ordered_list_generator"
version = "0.1.0"
authors = ["Joe Cheney <Pretzelman718@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.18"